basic markdown editor
