# server/admin/openapi/oas_client_gen.go
@@ -40,6 +40,12 @@ type Invoker interface {
 	//
 	// GET /entries
 	GetLatestEntries(ctx context.Context, params GetLatestEntriesParams) ([]GetLatestEntriesRow, error)
+	// GetLinkedEntryPaths invokes getLinkedEntryPaths operation.
+	//
+	// Get linked entry paths.
+	//
+	// GET /entries/{path}/links
+	GetLinkedEntryPaths(ctx context.Context, params GetLinkedEntryPathsParams) (LinkedEntriesResponse, error)
 }
 
 // Client implements OAS client.
@@ -265,6 +271,97 @@ func (c *Client) sendGetLatestEntries(ctx context.Context, params GetLatestEntri
 
 	stage = "DecodeResponse"
 	result, err := decodeGetLatestEntriesResponse(resp)
+	if err != nil {
+		return res, errors.Wrap(err, "decode response")
+	}
+
+	return result, nil
+}
+
+// GetLinkedEntryPaths invokes getLinkedEntryPaths operation.
+//
+// Get linked entry paths.
+//
+// GET /entries/{path}/links
+func (c *Client) GetLinkedEntryPaths(ctx context.Context, params GetLinkedEntryPathsParams) (LinkedEntriesResponse, error) {
+	res, err := c.sendGetLinkedEntryPaths(ctx, params)
+	return res, err
+}
+
+func (c *Client) sendGetLinkedEntryPaths(ctx context.Context, params GetLinkedEntryPathsParams) (res LinkedEntriesResponse, err error) {
+	otelAttrs := []attribute.KeyValue{
+		otelogen.OperationID("getLinkedEntryPaths"),
+		semconv.HTTPRequestMethodKey.String("GET"),
+		semconv.HTTPRouteKey.String("/entries/{path}/links"),
+	}
+
+	// Run stopwatch.
+	startTime := time.Now()
+	defer func() {
+		// Use floating point division here for higher precision (instead of Millisecond method).
+		elapsedDuration := time.Since(startTime)
+		c.duration.Record(ctx, float64(elapsedDuration)/float64(time.Millisecond), metric.WithAttributes(otelAttrs...))
+	}()
+
+	// Increment request counter.
+	c.requests.Add(ctx, 1, metric.WithAttributes(otelAttrs...))
+
+	// Start a span for this request.
+	ctx, span := c.cfg.Tracer.Start(ctx, GetLinkedEntryPathsOperation,
+		trace.WithAttributes(otelAttrs...),
+		clientSpanKind,
+	)
+	// Track stage for error reporting.
+	var stage string
+	defer func() {
+		if err != nil {
+			span.RecordError(err)
+			span.SetStatus(codes.Error, stage)
+			c.errors.Add(ctx, 1, metric.WithAttributes(otelAttrs...))
+		}
+		span.End()
+	}()
+
+	stage = "BuildURL"
+	u := uri.Clone(c.requestURL(ctx))
+	var pathParts [3]string
+	pathParts[0] = "/entries/"
+	{
+		// Encode "path" parameter.
+		e := uri.NewPathEncoder(uri.PathEncoderConfig{
+			Param:   "path",
+			Style:   uri.PathStyleSimple,
+			Explode: false,
+		})
+		if err := func() error {
+			return e.EncodeValue(conv.StringToString(params.Path))
+		}(); err != nil {
+			return res, errors.Wrap(err, "encode path")
+		}
+		encoded, err := e.Result()
+		if err != nil {
+			return res, errors.Wrap(err, "encode path")
+		}
+		pathParts[1] = encoded
+	}
+	pathParts[2] = "/links"
+	uri.AddPathParts(u, pathParts[:]...)
+
+	stage = "EncodeRequest"
+	r, err := ht.NewRequest(ctx, "GET", u)
+	if err != nil {
+		return res, errors.Wrap(err, "create request")
+	}
+
+	stage = "SendRequest"
+	resp, err := c.cfg.Client.Do(r)
+	if err != nil {
+		return res, errors.Wrap(err, "do request")
+	}
+	defer resp.Body.Close()
+
+	stage = "DecodeResponse"
+	result, err := decodeGetLinkedEntryPathsResponse(resp)
 	if err != nil {
 		return res, errors.Wrap(err, "decode response")
 	}
