# server/admin/openapi/oas_operations_gen.go
@@ -8,4 +8,5 @@ type OperationName = string
 const (
 	GetEntryByDynamicPathOperation OperationName = "GetEntryByDynamicPath"
 	GetLatestEntriesOperation      OperationName = "GetLatestEntries"
+	GetLinkedEntryPathsOperation   OperationName = "GetLinkedEntryPaths"
 )
