# server/admin/openapi/oas_response_encoders_gen.go
@@ -45,6 +45,20 @@ func encodeGetLatestEntriesResponse(response []GetLatestEntriesRow, w http.Respo
 	return nil
 }
 
+func encodeGetLinkedEntryPathsResponse(response LinkedEntriesResponse, w http.ResponseWriter, span trace.Span) error {
+	w.Header().Set("Content-Type", "application/json; charset=utf-8")
+	w.WriteHeader(200)
+	span.SetStatus(codes.Ok, http.StatusText(200))
+
+	e := new(jx.Encoder)
+	response.Encode(e)
+	if _, err := e.WriteTo(w); err != nil {
+		return errors.Wrap(err, "write")
+	}
+
+	return nil
+}
+
 func encodeErrorResponse(response *ErrorResponseStatusCode, w http.ResponseWriter, span trace.Span) error {
 	w.Header().Set("Content-Type", "application/json; charset=utf-8")
 	code := response.StatusCode
